styles/components/main_workbox.css
.works {
    height: 600px;
    text-transform: capitalize;
    margin-bottom: 100px;
}

.works-contents {
    position: relative;
    top: -95%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 230px;
}

.works-contents .title {
    margin-bottom: 40px;
}

.works-details {
    display: flex;
    justify-content: center;
    font-weight: 100;
}

.work {
    margin: 0 15px;
}

.work:first-child {
    margin-left: 0;
}

.work-cover { /* cover씌워서 css로 이미지 scale 처리 */
    width: 370px;
    height: 230px;
    overflow: hidden;
    background-color: #000;
    margin-bottom: 10px;
}

.work-link {
    font-family: 'Archivo Black', sans-serif;
    color: grey;
}

.work-img {
    display: block;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    margin-bottom: 10px;
    transition: all 400ms ease-out;
}

.work-img:hover {
    transform: scale(1.15);
    opacity: 0.7;
}

.interactive {
    background-image: url("https://cdn.jsdelivr.net/gh/hjkdw95/portfolio@main/assets/zoomin.jpeg");
}

.brunch {
    background-image: url("https://cdn.jsdelivr.net/gh/hjkdw95/portfolio@main/assets/brunch.jpeg");
}

.carrot {
    background-image: url("https://cdn.jsdelivr.net/gh/hjkdw95/portfolio@main/assets/carrot_game.jpeg");
}


@media screen and (max-width: 1024px) {
    .works {
        height: 145vh;
        margin-bottom: 80px;
    }

    .works-contents {
        display: block;
        top: -57%;
        margin-left: 0;
    }

    .title {
        display: inline-block;
        padding: 0;
        margin-bottom: 30px;
    }

    .works-details {
        display: block;
    }

    .work {
        width: 100%;
        margin: 0 0 20px 0;
    }

    .work-cover {
        width: 100%;
    }
}

